# kipi

./: Cargo.toml  README.md  artifacts.json  build.rs  changelog.rss  index.html  kipi-installer.ps1.txt  kipi-installer.sh.txt  oranda.json
.github/workflows/: lint.yml  web.yml
artifacts/: index.html
changelog/: index.html
changelog/v0.1.0/: index.html
changelog/v1.0.0/: index.html
src/: args.rs  keepawake.rs  main.rs  wakeup.rs
