[package]
name = "kipi"
version = "0.1.0"
edition = "2021"
authors = ["thewh1teagle"]
repository = "https://github.com/thewh1teagle/kipi"
homepage = "https://github.com/thewh1teagle/kipi"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
ctrlc = "3.4.4"
env_logger = "0.11.3"
eyre = "0.6.12"
humantime = "2.1.0"
keepawake = "0.5.1"
log = "0.4.21"
open = "5.1.2"
os_info = "3.8.2"
url = "2.5.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.3"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# CI backends to support
ci = ["github"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true
